--- a/.woodpecker/build.yml
+++ b/.woodpecker/build.yml
@@ -1,8 +1,9 @@
+platform: darwin/arm64
+
 pipeline:
   build:
-    image: alpine:latest
+    image: /bin/bash
     commands:
-      - apk add meson build-base
-      - meson build
-      - samu -C build
-      - build/ci-test
+      - echo begin
+      - echo set
+      - echo what
